--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,8 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+
+        <junit.version>4.13.2</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +64,12 @@
                 <groupId>cn.jinyahuan.commons.tester</groupId>
                 <artifactId>tester-core</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
